<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:gravity="center"
            android:id="@+id/rtsp_adder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/refresh_video"
                android:textColor="@color/qmui_config_color_red"
                android:text="@string/refresh"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/reset_adder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/btn_filled_blue_bg_disabled"
                android:text="@string/reset_rtsp" />
        </LinearLayout>
    </LinearLayout>
    <com.example.videoplayer.video.MyPlayer
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
        android:id="@+id/pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.qmuiteam.qmui.layout.QMUILinearLayout
                    android:layout_margin="5dp"
                    android:background="@drawable/layoutbackground"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:alpha="0.69"
                    android:outlineSpotShadowColor="@color/tab_noselector"
                    android:elevation="36dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <ImageButton
                                android:id="@+id/font_heart"
                                android:layout_width="40dp"
                                android:layout_height="40dp"/>
                            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                                android:id="@+id/progress_heart"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:rcMax="160"
                                app:rcRadius="10dp"
                                app:rcBackgroundPadding="3dp"
                                app:rcReverse="false"
                                app:rcProgressColor="@color/success"
                                app:rcBackgroundColor="@color/pro_back" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:layout_marginStart="50dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/heart"/>
                            <TextView
                                android:id="@+id/text_heart"
                                android:textSize="25sp"
                                android:textColor="@color/danger"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/heart_pi"/>
                        </LinearLayout>
                    </RelativeLayout>
                </com.qmuiteam.qmui.layout.QMUILinearLayout>


                <com.qmuiteam.qmui.layout.QMUILinearLayout
                    android:layout_margin="5dp"
                    android:background="@drawable/layoutbackground"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:alpha="0.69"
                    android:outlineSpotShadowColor="@color/tab_noselector"
                    android:elevation="36dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <ImageButton
                                android:id="@+id/font_pause_up"
                                android:layout_width="40dp"
                                android:layout_height="40dp"/>
                            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                                android:id="@+id/progress_preasureup"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:rcMax="180"
                                app:rcRadius="10dp"
                                app:rcBackgroundPadding="3dp"
                                app:rcReverse="false"
                                app:rcProgressColor="@color/success"
                                app:rcBackgroundColor="@color/pro_back" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:layout_marginStart="50dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pause_up"/>
                            <TextView
                                android:id="@+id/text_pause_up"
                                android:textSize="25sp"
                                android:textColor="@color/warning"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pause_up_pi"/>
                        </LinearLayout>
                    </RelativeLayout>
                </com.qmuiteam.qmui.layout.QMUILinearLayout>


                <com.qmuiteam.qmui.layout.QMUILinearLayout
                    android:layout_margin="5dp"
                    android:background="@drawable/layoutbackground"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:alpha="0.69"
                    android:outlineSpotShadowColor="@color/tab_noselector"
                    android:elevation="36dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <ImageButton
                                android:id="@+id/font_pause_down"
                                android:layout_width="40dp"
                                android:layout_height="40dp"/>
                            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                                android:id="@+id/progress_preasuredown"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:rcMax="100"
                                app:rcRadius="10dp"
                                app:rcBackgroundPadding="3dp"
                                app:rcReverse="false"
                                app:rcProgressColor="@color/success"
                                app:rcBackgroundColor="@color/pro_back" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:layout_marginStart="50dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pause_down"/>
                            <TextView
                                android:id="@+id/text_pause_down"
                                android:textSize="25sp"
                                android:textColor="@color/primary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pause_up_pi"/>
                        </LinearLayout>
                    </RelativeLayout>
                </com.qmuiteam.qmui.layout.QMUILinearLayout>

            <!--数据最后更新时间-->
                <TextView
                    android:id="@+id/last_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"/>
            </LinearLayout>
    </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>

</LinearLayout>